cmake_minimum_required(VERSION 3.16)
project(AnvirusRaroIA CXX)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
find_package(Qt5 COMPONENTS Core Gui Widgets REQUIRED)
find_package(OpenSSL REQUIRED)
set(SOURCES src/main.cpp src/core/antivirus_engine.cpp src/database/threat_database.cpp src/scanner/vulnerability_scanner.cpp src/monitor/system_monitor.cpp src/firewall/firewall_engine.cpp src/ransomware/ransomware_detector.cpp src/encryption/encryption_manager.cpp src/gui/main_window.cpp src/utils/logger.cpp src/utils/config_manager.cpp src/utils/file_utils.cpp src/utils/system_utils.cpp)
add_executable(osa-antivirus ${SOURCES})
target_link_libraries(osa-antivirus Qt5::Core Qt5::Gui Qt5::Widgets OpenSSL::Crypto OpenSSL::SSL)
target_include_directories(osa-antivirus PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/src)